feat: fix dependency issue